--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,24 @@
 [project]
-name = "agent-template"
-version = "0.1.0"
-description = "A template for A2A agents"
+name = "aqa-baseline-purple-agent"
+version = "1.0.0"
+description = "AQA Baseline Purple Agent for AgentBeats Competition"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "a2a-sdk[http-server]>=0.3.20",
     "uvicorn>=0.38.0",
     "openai>=1.0.0",
+    "aiohttp>=3.9.0",
+    "transformers>=4.40.0",
+    "tiktoken>=0.6.0",
+    "google-search-results>=2.4.2",
+    "langchain-experimental>=0.0.50",
+    "tavily-python>=0.3.0",
+    "pydantic>=2.0.0",
+    "beautifulsoup4>=4.12.0",
+    "lxml>=4.9.0",
+    "requests>=2.31.0",
+    "httpx>=0.28.0",
 ]
 
 [project.optional-dependencies]
