--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,19 @@ dependencies = [
     "transformers>=4.40.0",
     "tiktoken>=0.6.0",
     "google-search-results>=2.4.2",
-    "langchain-experimental>=0.0.50",
+    "langchain>=0.3.0",
+    "langchain-community>=0.3.0",
+    "langchain-experimental>=0.3.0",
     "tavily-python>=0.3.0",
     "pydantic>=2.0.0",
     "beautifulsoup4>=4.12.0",
     "lxml>=4.9.0",
     "requests>=2.31.0",
     "httpx>=0.28.0",
+    "markdownify>=0.11.0",
+    "readabilipy>=0.2.0",
+    "pyyaml>=6.0.0",
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
